# advent

./: .flake8  .gitignore  pyproject.toml
advent/calorie_counting/: main.py
advent/camp_cleanup/: main.py
advent/rock_paper_scissors/: main.py
advent/rucksack_reorganisation/: main.py
advent/supply_stacks/: main.py
advent/tuning_trouble/: main.py
tests/camp_cleanup/: main.py
tests/rock_paper_scissors/: README.md  test_2.txt  test_rps.py
tests/rucksack_reorganisation/: test_camp_cleanup.py  test_rr.py
tests/supply_stacks/: test_2.txt  test_suppy_stacks.py
tests/tuning_trouble/: test_tuning_table.py
