[tool.poetry]
name = "advent"
version = "0.1.0"
description = "The advent of code."
authors = ["Jan Willems <jan.willems@elevenbits.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
